# GCP

./: .gitignore  BQ.py  BeamPipeline.py  Log.py  Publisher.py  activate_svc.ps1  auth.py  constants.py  gcloud_commands  publisher.py  subscriber.py  utils.py
Aggregation/: query.sql
Basics/: Intro-1.ipynb  Intro-2.ipynb
ConditionalExp/: query.sql
DataFlow(J Garg)/: 1.basics.py  2.transforms.py  3.problem1.py  4.assignment1.py  5.pardo.py  6.CompositeTransform.py
DataFlow(J Garg)/outputs/assignment1/: out-00000-of-00001
DataFlow(J Garg)/outputs/basics/p1_out/: out-00000-of-00001
DataFlow(J Garg)/outputs/basics/p2_out/: out-00000-of-00001
DataFlow(J Garg)/outputs/basics/p3_out/: out-00000-of-00001
DataFlow(J Garg)/outputs/pardo/: out-00000-of-00001
DataFlow(J Garg)/outputs/problem1/: out-00000-of-00001
DataFlow/1.Intro/: 1.LocalTest.py  2.CloudTest.py
DataFlow/2.Template/: create_template.py
DataSource/: food_daily_10_2020.csv
Functions/: ArrayFunctions.sql  DateFunctions.sql  StringFunctions.sql
GCP/1.GCS/: main.tf
GCP/2.Network/: main.tf  provider.tf
GCP/3.CloudRun/: main.tf
GCP/5.BigQuery/: main.tf  provider.tf
GCP/auth_with_svc/: main.tf
GCP/get_started_with_gcp/: main.tf
Queries1/: 10.sql  11.sql  12.sql  15.sql  18.sql  19.sql  20.sql  8.sql  9.sql
Terraform/: .terraform.lock.hcl  col_desc.js  main.tf  provider.tf  terraform.tfstate  terraform.tfstate.backup  view_ddl.sql
WindowFunctions/: Window.sql
sample/: Dockerfile  cloudbuild.yaml  pyproject.toml
sample/sample/: app.py
sample/tests/: test_func.py
(+3 files in other folders)
