[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Deepaksai1919 <31119831+Deepaksai1919@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
